--- a/package.json
+++ b/package.json
@@ -11,17 +11,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
+    "@angular/animations": "^6.1.7",
+    "@angular/cdk": "^6.4.7",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
+    "@angular/flex-layout": "^6.0.0-beta.18",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
+    "@angular/material": "^6.4.7",
+    "@angular/material-moment-adapter": "^6.4.7",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "angular-base64": "^2.0.5",
+    "angular-material-time-picker": "^1.0.8",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
+    "html-screen-capture-js": "^1.0.10",
+    "html2canvas": "^1.0.0-alpha.12",
+    "js-sha256": "^0.9.0",
+    "jspdf": "^1.4.1",
+    "moment": "^2.22.2",
+    "q": "^1.5.1",
+    "qz-tray": "^2.0.7",
+    "rsvp": "^4.8.4",
     "rxjs": "~6.2.0",
+    "sha": "^2.0.1",
+    "webpack": "^4.4.1",
+    "ws": "^6.1.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
