--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "html2canvas": "^1.0.0-alpha.12",
     "js-sha256": "^0.9.0",
     "jspdf": "^1.4.1",
+    "jsrsasign": "^8.0.12",
     "moment": "^2.22.2",
     "q": "^1.5.1",
     "qz-tray": "^2.0.7",
